; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_common_vt_2t_4x4_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_common_vt_2t_4x4_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*)* @common_vt_2t_4x4_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_vt_2t_4x4_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i32, align 4
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = call i32 @LD_SH(i32* %26)
  store i32 %27, i32* %23, align 4
  %28 = load i32, i32* %23, align 4
  %29 = call i64 @__msa_splati_h(i32 %28, i32 0)
  store i64 %29, i64* %22, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* %13, align 4
  %35 = load i32, i32* %14, align 4
  %36 = load i32, i32* %15, align 4
  %37 = call i32 @LD_SB5(i32* %30, i32 %31, i32 %32, i32 %33, i32 %34, i32 %35, i32 %36)
  %38 = load i32, i32* %7, align 4
  %39 = mul nsw i32 5, %38
  %40 = load i32*, i32** %6, align 8
  %41 = sext i32 %39 to i64
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  store i32* %42, i32** %6, align 8
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %11, align 4
  %45 = load i32, i32* %13, align 4
  %46 = load i32, i32* %12, align 4
  %47 = load i32, i32* %14, align 4
  %48 = load i32, i32* %13, align 4
  %49 = load i32, i32* %15, align 4
  %50 = load i32, i32* %14, align 4
  %51 = load i32, i32* %16, align 4
  %52 = load i32, i32* %18, align 4
  %53 = load i32, i32* %17, align 4
  %54 = load i32, i32* %19, align 4
  %55 = call i32 @ILVR_B4_SB(i32 %43, i32 %44, i32 %45, i32 %46, i32 %47, i32 %48, i32 %49, i32 %50, i32 %51, i32 %52, i32 %53, i32 %54)
  %56 = load i32, i32* %18, align 4
  %57 = load i32, i32* %16, align 4
  %58 = load i32, i32* %19, align 4
  %59 = load i32, i32* %17, align 4
  %60 = load i32, i32* %20, align 4
  %61 = load i32, i32* %21, align 4
  %62 = call i32 @ILVR_D2_SB(i32 %56, i32 %57, i32 %58, i32 %59, i32 %60, i32 %61)
  %63 = load i32, i32* %20, align 4
  %64 = load i32, i32* %21, align 4
  %65 = load i64, i64* %22, align 8
  %66 = load i64, i64* %22, align 8
  %67 = load i64, i64* %24, align 8
  %68 = load i64, i64* %25, align 8
  %69 = call i32 @DOTP_UB2_UH(i32 %63, i32 %64, i64 %65, i64 %66, i64 %67, i64 %68)
  %70 = load i64, i64* %24, align 8
  %71 = load i64, i64* %25, align 8
  %72 = call i32 @SRARI_H2_UH(i64 %70, i64 %71, i32 7)
  %73 = load i64, i64* %24, align 8
  %74 = load i64, i64* %25, align 8
  %75 = call i32 @SAT_UH2_UH(i64 %73, i64 %74, i32 7)
  %76 = load i64, i64* %25, align 8
  %77 = trunc i64 %76 to i32
  %78 = load i64, i64* %24, align 8
  %79 = trunc i64 %78 to i32
  %80 = call i32 @__msa_pckev_b(i32 %77, i32 %79)
  store i32 %80, i32* %20, align 4
  %81 = load i32, i32* %20, align 4
  %82 = load i32*, i32** %8, align 8
  %83 = load i32, i32* %9, align 4
  %84 = call i32 @ST_W4(i32 %81, i32 0, i32 1, i32 2, i32 3, i32* %82, i32 %83)
  ret void
}

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i64 @__msa_splati_h(i32, i32) #1

declare dso_local i32 @LD_SB5(i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_D2_SB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @DOTP_UB2_UH(i32, i32, i64, i64, i64, i64) #1

declare dso_local i32 @SRARI_H2_UH(i64, i64, i32) #1

declare dso_local i32 @SAT_UH2_UH(i64, i64, i32) #1

declare dso_local i32 @__msa_pckev_b(i32, i32) #1

declare dso_local i32 @ST_W4(i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
